--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.youracclaim.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.youracclaim.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-acclaim" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
