--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>VBalkrishna Atmaram Londhe</h1>
+            <h2>Application Developer: DevOps</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Having 2+ years of experience as a Skilled Application Consultant:DevOps and DevOps engineer.Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies.Also in using open Docker images and also build custom Docker images based on the application requirements. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like FreeStyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts.Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
+
                     </p>
                 </div>
             </div>
