--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>VBalkrishna Atmaram Londhe</h1>
+            <h1>Balkrishna Atmaram Londhe</h1>
             <h2>Application Developer: DevOps</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -250,7 +250,7 @@
                             <a href="https://github.com/BalkrishnaBK" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
