--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             <a href="https://github.com/BalkrishnaBK" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                            <a href="https://wa.me/9623325030" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
