--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
                         </li>
                         <li>
                             <a href="https://www.youracclaim.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-acclaim" aria-hidden="true"></i></a> 
-                            <!-- Replaced from facebook -->
+                            <!-- Replaced from acclaim -->
                         </li>
                         <li>
                             <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="tel:+919325877900" target="_blank"><i class="fa fa-phone-call" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
