--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                             <!-- Replaced from acclaim -->
                         </li>
                         <li>
-                            <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="tel:+919325877900" target="_blank"><i class="fa fa-phone-call" aria-hidden="true"></i></a>
