--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
                         <li>
                             <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
+                        <li>
+                            <a href="https://www.youracclaim.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-acclaim" aria-hidden="true"></i></a>
+                        </li>
                         <!-- <li>
                             <a href="https://www.youracclaim.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-acclaim" aria-hidden="true"></i></a> 
                         </li> -->
