--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="tel:+919325877900" target="_blank"><i class="fa fa-phone-call" aria-hidden="true"></i></a>
+                            <a href="tel:+919325877900" target="_blank"><i class="fa fa-mobile-phone" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
