--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
                 <a href="#education">Education</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#honors">Honors & awards</a>
+            </li>
+            <li>
+                <a href="#publications">Publications</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -144,45 +147,71 @@
     </div>
     <!-- End #education -->
 
-    <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+    <div id="honors" class="background-alt">
+        <h2 class="heading">Honors & Awards</h2>
         <div class="container">
             <div class="row">
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
+                <div class="honor-block">
+                    <h3>BEN's SUPERSTAR</h3>
+                    <span class="award-date">Aug 2020</span>
+                    <p>
+                        Balkrishna ..Your are a BEN's SUPERSTAR ... Here is a small token of appreciation for all your contribution on Bendigo... You have been leading DevOps activites for OB team from Iteration 0. During migration to Interim AWS, you played a very critical role and extended working over several weekends ensuring a successful migration. The same was often appreciated by Geo team.
+                    </p>
                 </div>
-                <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
+                <div class="honor-block">
+                    <h3>Manager's Choice Award</h3>
+                    <span class="award-date">Nov 2019</span>
+                    <p>
+                        Thanks for all the hard work that you are doing for Aus CDS asset development. You are adding great value to the project. Keep it up.
+                    </p>
                 </div>
-                <!-- End .project -->
+
+                <div class="honor-block">
+                    <h3>Manager's Choice Award for demonstrating the following IBM Practice: Restlessly reinvent -- our company and ourselves</h3>
+                    <span class="award-date">Apr 2019</span>
+                    <p>
+                        We really appreciate all of your hard work and effort. There is much more to achieve in the coming months and we are looking forward to very active participation from you.
+
+                        You did a wonderful job!!! Keep it up.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-    <!-- End #projects -->
+    <!-- End #honors -->
+
+
+    <div id="publications" class="background-alt">
+        <h2 class="heading">Publications</h2>
+        <div class="container">
+            <div class="row">
+                <div class="honor-block">
+                    <h3>Transportation Portal</h3>
+                    <span class="publication-date">2017</span>
+                    <p>
+                        Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
+                        Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
+                        INTERDISCIPLINARY INNOVATIVE RESEARCH AND DEVELOPMENT Vol. 01, Issue
+                        03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
+                    </p>
+                </div>
+
+                <div class="honor-block">
+                    <h3>A Survey on Transportation portal</h3>
+                    <span class="publication-date">Nov 2016</span>
+                    <p>
+                        Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
+                        Ingale: A Survey on Transportation portal, in: International Journal of Innovative
+                        Research in Computer and Communication Engineering, Balkrishna Londhe , Dr.Arati
+                        Dandwate, 2016, ISBN/ISSN: 2320-9801
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End #publications -->
+
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
