--- a/index.html
+++ b/index.html
@@ -150,27 +150,27 @@
 
     <div id="honors">
         <h2 class="heading">Honors & Awards</h2>
-        <div class="honor-block">
+        <div class="honors-block">
             <h3>>BEN's SUPERSTAR</h3>
-            <span class="honor-date">August 2020</span>
+            <span class="honors-date">August 2020</span>
             <p>
                 Balkrishna ..Your are a BEN's SUPERSTAR ... Here is a small token of appreciation for all your contribution on Bendigo... You have been leading DevOps activites for OB team from Iteration 0. During migration to Interim AWS, you played a very critical role and extended working over several weekends ensuring a successful migration. The same was often appreciated by Geo team.
             </p>
         </div>
         <!-- End .honor-block -->
 
-        <div class="honor-block">
+        <div class="honors-block">
             <h3>>Manager's Choice Award</h3>
-            <span class="honor-date">November 2019</span>
+            <span class="honors-date">November 2019</span>
             <p>
                 Thanks for all the hard work that you are doing for Aus CDS asset development. You are adding great value to the project. Keep it up.
             </p>
         </div>
         <!-- End .honor-block -->
 
-        <div class="honor-block">
+        <div class="honors-block">
             <h3>>Manager's Choice Award for demonstrating the following IBM Practice: Restlessly reinvent -- our company and ourselves</h3>
-            <span class="honor-date">April 2019</span>
+            <span class="honors-date">April 2019</span>
             <p>
                 We really appreciate all of your hard work and effort. There is much more to achieve in the coming months and we are looking forward to very active participation from you.
 
