--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
                 <a href="#education">Education</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
                 <a href="#honors">Honors & awards</a>
             </li>
             <li>
                 <a href="#publications">Publications</a>
+            </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+            <li>
+                <a href="#certificates">Certifications and Key Courses</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -148,10 +151,10 @@
     <!-- End #education -->
 
 
-    <div id="honors">
+    <div id="honors" class="background-alt">
         <h2 class="heading">Honors & Awards</h2>
         <div class="education-block">
-            <h3>>BEN's SUPERSTAR</h3>
+            <h3>BEN's SUPERSTAR</h3>
             <span class="education-date">August 2020</span>
             <h4></h4>
             <p>
@@ -161,7 +164,7 @@
         <!-- End .honor-block -->
 
         <div class="education-block">
-            <h3>>Manager's Choice Award</h3>
+            <h3>Manager's Choice Award</h3>
             <span class="education-date">November 2019</span>
             <h4></h4>
             <p>
@@ -171,7 +174,7 @@
         <!-- End .honor-block -->
 
         <div class="education-block">
-            <h3>>Manager's Choice Award for demonstrating the following IBM Practice: Restlessly reinvent -- our company and ourselves</h3>
+            <h3>Manager's Choice Award for demonstrating the following IBM Practice: Restlessly reinvent -- our company and ourselves</h3>
             <span class="education-date">April 2019</span>
             <h4></h4>
             <p>
@@ -182,51 +185,15 @@
         </div>
         <!-- End .honor-block -->
     </div>
-    <!-- End #honor -->
 
 
-    <!-- <div id="honors" class="background-alt">
-        <h2 class="heading">Honors & Awards</h2>
-        <div class="container">
-            <div class="row">
-                <div class="honor-block">
-                    <h3>BEN's SUPERSTAR</h3>
-                    <span class="award-date">Aug 2020</span>
-                    <p>
-                        Balkrishna ..Your are a BEN's SUPERSTAR ... Here is a small token of appreciation for all your contribution on Bendigo... You have been leading DevOps activites for OB team from Iteration 0. During migration to Interim AWS, you played a very critical role and extended working over several weekends ensuring a successful migration. The same was often appreciated by Geo team.
-                    </p>
-                </div>
-
-                <div class="honor-block">
-                    <h3>Manager's Choice Award</h3>
-                    <span class="award-date">Nov 2019</span>
-                    <p>
-                        Thanks for all the hard work that you are doing for Aus CDS asset development. You are adding great value to the project. Keep it up.
-                    </p>
-                </div>
-
-                <div class="honor-block">
-                    <h3>Manager's Choice Award for demonstrating the following IBM Practice: Restlessly reinvent -- our company and ourselves</h3>
-                    <span class="award-date">Apr 2019</span>
-                    <p>
-                        We really appreciate all of your hard work and effort. There is much more to achieve in the coming months and we are looking forward to very active participation from you.
-
-                        You did a wonderful job!!! Keep it up.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- End #honors -->
-
-
-    <div id="publications" class="background-alt">
+    <div id="publications">
         <h2 class="heading">Publications</h2>
         <div class="container">
             <div class="row">
-                <div class="honor-block">
+                <div class="education-block">
                     <h3>Transportation Portal</h3>
-                    <span class="publication-date">2017</span>
+                    <span class="education-date">2017</span>
                     <p>
                         Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
                         Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
@@ -235,9 +202,9 @@
                     </p>
                 </div>
 
-                <div class="honor-block">
+                <div class="education-block">
                     <h3>A Survey on Transportation portal</h3>
-                    <span class="publication-date">Nov 2016</span>
+                    <span class="education-date">Nov 2016</span>
                     <p>
                         Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
                         Ingale: A Survey on Transportation portal, in: International Journal of Innovative
@@ -251,7 +218,7 @@
     <!-- End #publications -->
 
 
-    <div id="skills">
+    <div id="skills" class="background-alt">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
@@ -283,6 +250,37 @@
         </ul>
     </div>
     <!-- End #skills -->
+
+
+    <div id="certificates">
+        <h2 class="heading">Certifications and Key Courses</h2>
+        <div class="container">
+            <div class="row">
+                <div class="education-block">
+                    <h3>Transportation Portal</h3>
+                    <span class="education-date">2017</span>
+                    <p>
+                        Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
+                        Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
+                        INTERDISCIPLINARY INNOVATIVE RESEARCH AND DEVELOPMENT Vol. 01, Issue
+                        03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
+                    </p>
+                </div>
+
+                <div class="education-block">
+                    <h3>A Survey on Transportation portal</h3>
+                    <span class="education-date">Nov 2016</span>
+                    <p>
+                        Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
+                        Ingale: A Survey on Transportation portal, in: International Journal of Innovative
+                        Research in Computer and Communication Engineering, Balkrishna Londhe , Dr.Arati
+                        Dandwate, 2016, ISBN/ISSN: 2320-9801
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End #publications -->
 
     <div id="contact">
         <h2>Get in Touch</h2>
