--- a/index.html
+++ b/index.html
@@ -187,7 +187,41 @@
     </div>
 
 
+
+
     <div id="publications">
+        <h2 class="heading">Publications</h2>
+        <div class="education-block">
+            <h3>Transportation Porta</h3>
+            <span class="education-date">2017</span>
+            <h4></h4>
+            <p>
+                Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
+                Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
+                INTERDISCIPLINARY INNOVATIVE RESEARCH AND DEVELOPMENT Vol. 01, Issue
+                03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
+            </p>
+        </div>
+        <!-- End .honor-block -->
+
+        <div class="education-block">
+            <h3>Survey on Transportation portal</h3>
+            <span class="education-date">Nov 2016</span>
+            <h4></h4>
+            <p>
+                Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
+                Ingale: A Survey on Transportation portal, in: International Journal of Innovative
+                Research in Computer and Communication Engineering, Balkrishna Londhe , Dr.Arati
+                Dandwate, 2016, ISBN/ISSN: 2320-9801
+            </p>
+        </div>
+        <!-- End .honor-block -->
+    </div>
+
+
+
+
+    <!-- <div id="publications">
         <h2 class="heading">Publications</h2>
         <div class="container">
             <div class="row">
@@ -214,7 +248,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End #publications -->
 
 
