--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
             </p>
         </div>
-        <!-- End .honor-block -->
+        <!-- End .publications-block -->
 
         <div class="education-block">
             <h3>Survey on Transportation portal</h3>
@@ -215,7 +215,7 @@
                 Dandwate, 2016, ISBN/ISSN: 2320-9801
             </p>
         </div>
-        <!-- End .honor-block -->
+        <!-- End .publications-block -->
     </div>
 
 
