--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Balkrishna Atmaram Londhe</h1>
-            <h2>Application Developer: DevOps</h2>
+            <h2>DevOps Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Having 2+ years of experience as a Skilled Application Developer:DevOps and DevOps engineer.Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies.Also in using open Docker images and also build custom Docker images based on the application requirements. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like FreeStyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts.Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
+                        I am having 2+ years of experience as a Skilled DevOps engineer. Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies. Also in using open Docker images and also build custom Docker images based on the application requirements. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts. Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
 
                     </p>
                 </div>
@@ -95,7 +95,64 @@
                 <h3>IBM India Private Limited</h3>
                 <h4>DevOps Engineer</h4>
                 <p>
-                    TBA
+                    As an DevOps Engineer, I worked on the automation of CI/CD scripts using dev tools. I am working with multiple clients. Responsible for design and implementation of end to end automated delivery for multiple applications. Also, I am a part of the open banking, Digital Platform, and DevOps team in the Bendigo project. I am responsible for managing Dev tools and managing deployments. I worked on different tools. I worked on multiple Deployment and Integration tools. As well I worked on multiple Image repositories and Binary management tools. My primary work is to manage deployments. I am working on GitLab for Source Code Management and the same we are using as Integration and deployment tools as well but initially, we used to have GitHub as SCM and Jenkins as Integration tool and Ansible as Deployment tool. For the Image registry now we are using Jfrog but initially, we used to have IBM cloud Image Registry. In this project, I am responsible for the installation of Integration tools like Jenkins, Deployment tools like Ansible, and management of them. In this project, I deployed code on IBM Cloud Kubernetes Service platforms and now deploying on Amazon Web Services platform. I was responsible for the installation of Integration tools like Jenkins, Deployment tools like Urban Code Deploy, and Ansible. Also, the Image repository setup is done by me like JFrog and Nexus. For source code management we used Github. Even my role was to set up deployment environments like Kubernetes cluster and docker environment. Even I did deployment on single standalone VM's as well. I did the setup of ELK, Grafana, Prometheus, Zipkin, vault, and JIRA also management was with me for all this. 
+                    <li>Automation CI/CD pipeline using Jenkins and Ansible</li>
+                    <li>Responsible for design and implement end to end automated delivery for multiple
+                        applications</li>
+                    <li>Used GitHub and GitLab as Version Control Tools</li>
+                    <li>Used GitLab and Jenkins as Continues Integration Tools</li>
+                    <li>Used GitLab and Ansible for Continues Deployment Tools</li>
+                    <li>Responsible for design and implement end to end automated delivery for multiple
+                        applications</li>
+                    <li>Worked on the installation of image repositories like Nexus3 and jFrog</li>
+                    <li>Worked on installation on artifactory like Nexus2 and jFrog</li>
+                    <li>Created automation CI/CD pipeline using Jenkins, Ansible and IBM UCD</li>
+                    <li>Deployment of application and Management of Amazon Web Services Cloud and IBM
+                        Kubernetes Service</li>
+                    <li>Istio configuration and routing services using the gateway and VirtualService
+                    </li>
+                    <li>Deployment of SonarQube for static code analysis and code coverage</li>
+                    <li>Use of IBM cloud Container Registry as a Docker Repository</li>
+                    <li>Worked on Kafka event messaging system to perform deployment on AWS target
+                        server</li>
+                    <li>Worked on Service Mesh (istio) to perform deployment for Apic, Istio microservices</li>
+                    <li>Used docker containers in Kubernetes cluster for their application workload (Helm) and
+                        AWS</li>
+                    <li>Worked on migration activity from Github to Gitlab SAAS to move the microservices
+                        and then refactor them to migrate to GitLab SAAS</li>
+                    <li>The Canonical microservices were deployed using GitLab Auto-DevOps pipeline and
+                        create docker images were planned to store in common jFrog artifactory and it will be
+                        deployed in the Kubernetes cluster as a part of deployment via the YAML</li>
+                    <li>Developed container and YAML to deploy the monitoring solution in Kubernetes cluster
+                        on to workload of Helm Chart</li>
+                    <li>Worked in Newman tool for testing automation</li>
+                    <li>Worked on Different environments like development, test and System Integration test
+                        and etc</li>
+                    <li>I was responsible for the installation of the master-slave installation of Kubernetes
+                        Clusters</li>
+                    <li>Wrote shell scripts for one-click installation of Kubernetes master and slaves and it's
+                        required applications</li>
+                    <li>I wrote spring boot application to create and run Continuous Integration activities on
+                        Jenkins</li>
+                    <li>I wrote spring boot application to create and run Continuous Deployment activities on
+                        Urban Code Development and Ansible
+                        </li>
+                    <li>Made Shell scripts to automate the installation of Kubernetes master and node also
+                        Docker setup on Vanilla VM in one script using one command also Automation Scripts
+                        for adding dynamic Prometheus target, dynamic creation of Grafana dashboard,
+                        dynamic port allocation, dynamic virtual server entry
+                        </li>
+                    <li>Created System metric Dashboard on Grafana for 50+ VMs Working Knowledge on
+                        monitoring tool – Grafana, Prometheus and plays a role in Linux Administration</li>
+                    <li>I set up Monitoring tools like Prometheus and Grafana on the virtual machine</li>
+                    <li>Worked on installation and management of Static code analysis tool like SonarQube</li>
+                    <li>Worked on installation and management of logging tools like ElasticSearch, Logstash
+                        and Kibana</li>
+                    <li>Worked on the deployment of tools like Kafdrop using docker-compose and helm chart
+                        for monitoring of kafka topics and logs</li>
+                    <li>Worked on deployment and management of tools like Configserver, Eureka and
+                        HystrixDashboard
+                        </li>
                 </p>
             </div>
         </div>
