--- a/index.html
+++ b/index.html
@@ -162,48 +162,53 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>TBA</h3>
-            <span class="education-date">TBA</span>
-            <h4>TBA</h4>
+            <h3>Bachelor's of Computer Engineer</h3>
+            <span class="education-date">2013-2017</span>
+            <h4>Savitribai Phule Pune University</h4>
             <p>
-                TBA
+                Completed BE in Computer Engineering with Distinction.
+                <ul>
+                    <li>
+                        Got Mr.Academics award in Engineering, Dhole Patil Of Engineering College
+                    </li>
+                    <li>
+                        Also was Technical Head of CESA(Computer Department Students Association) committee of Computer Department
+                    </li>
+                    <li>
+                        Was a member of college students committee
+                    </li>
+                    <li>Participated into Cultural event of Kshitij 2015 ,2016 and 2017, Drama in Kshitij 2015
+                        and 2016, Seed IT Idol</li>
+                </ul>
+                ACADEMIC PROJECT
+                Project title: Transportation Portal (BE 2016-17)
+                Duration: June 2016 -April 2017
+                Description: The Portal will provide transportation details to user and will keep data
+                stored in
+                Centralized database. We are providing Web portal and Android application where in
+                Android application notification system is provided. Further in portal we are
+                implementing this by using software only so surely it will reduce coast of Project.
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>TBA</h3>
-            <span class="education-date">TBA</span>
-            <h4>TBA</h4>
-            <ul>
-                <li>
-                    TBA
-                </li>
-                <li>
-                    TBA
-                </li>
-                <li>
-                    TBA
-                </li>
-            </ul>
+            <h3>HSC in Science</h3>
+            <span class="education-date">2012-2013</span>
+            <h4>Maharashtra State Board</h4>
+            <p>
+                Completed Higher Secondary studies with First Class.
+        </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>TBA</h3>
-            <span class="education-date">TBA</span>
-            <h4>TBA</h4>
-            <ul>
-                <li>
-                    TBA
-                </li>
-                <li>
-                    TBA
-                </li>
-                <li>
-                    TBA
-                </li>
-            </ul>
+            <h3>SSC</h3>
+            <span class="education-date">2010-2011</span>
+            <h4>Maharashtra State Board</h4>
+            <p>
+                Completed Secondary studies with Distinction.
+        </p>
         </div>
     </div>
     <!-- End #education -->
