--- a/index.html
+++ b/index.html
@@ -180,12 +180,11 @@
                     <li>Participated into Cultural event of Kshitij 2015 ,2016 and 2017, Drama in Kshitij 2015
                         and 2016, Seed IT Idol</li>
                 </ul>
-                ACADEMIC PROJECT
-                Project title: Transportation Portal (BE 2016-17)
-                Duration: June 2016 -April 2017
+                ACADEMIC PROJECT<br>
+                Project title: Transportation Portal (BE 2016-17)<br>
+                Duration: June 2016 -April 2017<br>
                 Description: The Portal will provide transportation details to user and will keep data
-                stored in
-                Centralized database. We are providing Web portal and Android application where in
+                stored in Centralized database. We are providing Web portal and Android application where in
                 Android application notification system is provided. Further in portal we are
                 implementing this by using software only so surely it will reduce coast of Project.
             </p>
