--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am having 2+ years of experience as a Skilled DevOps engineer. Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies. Also in using open Docker images and also build custom Docker images based on the application requirements. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts. Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
+                        I am having 2+ years of experience as a Skilled DevOps engineer. Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts. Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
 
                     </p>
                 </div>
@@ -254,7 +254,7 @@
     <div id="publications">
         <h2 class="heading">Publications</h2>
         <div class="education-block">
-            <h3>Transportation Porta</h3>
+            <h3>Transportation Portal</h3>
             <span class="education-date">2017</span>
             <h4></h4>
             <p>
@@ -267,7 +267,7 @@
         <!-- End .publications-block -->
 
         <div class="education-block">
-            <h3>Survey on Transportation portal</h3>
+            <h3>Survey on Transportation Portal</h3>
             <span class="education-date">Nov 2016</span>
             <h4></h4>
             <p>
