--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="lead-content">
             <h1>Balkrishna Atmaram Londhe</h1>
             <h2>DevOps Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="images/Balkrishna Atmaram Londhe.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
