--- a/index.html
+++ b/index.html
@@ -173,20 +173,7 @@
                 Description: The Portal will provide transportation details to user and will keep data
                 stored in Centralized database. We are providing Web portal and Android application where in
                 Android application notification system is provided. Further in portal we are
-                implementing this by using software only so surely it will reduce coast of Project.
-                <ul>
-                    <li>
-                        Got Mr.Academics award in Engineering, Dhole Patil Of Engineering College
-                    </li>
-                    <li>
-                        Also was Technical Head of CESA(Computer Department Students Association) committee of Computer Department
-                    </li>
-                    <li>
-                        Was a member of college students committee
-                    </li>
-                    <li>Participated into Cultural event of Kshitij 2015 ,2016 and 2017, Drama in Kshitij 2015
-                        and 2016, Seed IT Idol</li>
-                </ul>
+                implementing this by using software only so surely it will reduce coast of Project.                
             </p>
         </div>
         <!-- End .education-block -->
@@ -243,6 +230,28 @@
                 We really appreciate all of your hard work and effort. There is much more to achieve in the coming months and we are looking forward to very active participation from you.
 
                 You did a wonderful job!!! Keep it up.
+            </p>
+        </div>
+        <!-- End .honor-block -->
+
+        <div class="education-block">
+            <h3>Awards and Achievements in Graduation</h3>
+            <span class="education-date">April 2019</span>
+            <h4></h4>
+            <p>
+                <ul>
+                    <li>
+                        Got Mr.Academics award in Engineering, Dhole Patil Of Engineering College
+                    </li>
+                    <li>
+                        Also was Technical Head of CESA(Computer Department Students Association) committee of Computer Department
+                    </li>
+                    <li>
+                        Was a member of college students committee
+                    </li>
+                    <li>Participated into Cultural event of Kshitij 2015 ,2016 and 2017, Drama in Kshitij 2015
+                        and 2016, Seed IT Idol</li>
+                </ul>
             </p>
         </div>
         <!-- End .honor-block -->
