--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         <div class="education-block">
             <h3>Awards and Achievements in Graduation</h3>
-            <span class="education-date">April 2019</span>
+            <span class="education-date">2013-2017</span>
             <h4></h4>
             <p>
                 <ul>
