--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Bachelor's of Computer Engineer</h3>
+            <h3>Bachelor's of Engineering on Computers</h3>
             <span class="education-date">2013-2017</span>
             <h4>Savitribai Phule Pune University</h4>
             <p>
