Re-aligning sections and updated README.md

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                 <a href="#responsibilities">Responsibilities</a>
             </li>
             <li>
-                <a href="#education">Education</a>
-            </li>
-            <li>
                 <a href="#honors">Honors & awards</a>
-            </li>
-            <li>
-                <a href="#publications">Publications</a>
             </li>
             <li>
                 <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#certificates">Certifications and Key Courses</a>
+            </li>
+            <li>
+                <a href="#education">Education</a>
+            </li>
+            <li>
+                <a href="#publications">Publications</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -413,48 +413,8 @@
     </div>
     <!-- End #responsibilities -->
 
-    <div id="education" class="background-alt">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>Bachelor's of Engineering on Computers</h3>
-            <span class="education-date">2013-2017</span>
-            <h4>Savitribai Phule Pune University</h4>
-            <p>
-                Completed BE in Computer Engineering with Distinction.<br>                
-                ACADEMIC PROJECT<br>
-                Project title: Transportation Portal (BE 2016-17)<br>
-                Duration: June 2016 -April 2017<br>
-                Description: The Portal will provide transportation details to user and will keep data
-                stored in Centralized database. We are providing Web portal and Android application where in
-                Android application notification system is provided. Further in portal we are
-                implementing this by using software only so surely it will reduce coast of Project.                
-            </p>
-        </div>
-        <!-- End .education-block -->
 
-        <div class="education-block">
-            <h3>HSC in Science</h3>
-            <span class="education-date">2012-2013</span>
-            <h4>Maharashtra State Board</h4>
-            <p>
-                Completed Higher Secondary studies with First Class.
-        </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>SSC</h3>
-            <span class="education-date">2010-2011</span>
-            <h4>Maharashtra State Board</h4>
-            <p>
-                Completed Secondary studies with Distinction.
-        </p>
-        </div>
-    </div>
-    <!-- End #education -->
-
-
-    <div id="honors">
+    <div id="honors" class="background-alt">
         <h2 class="heading">Honors & Awards</h2>
         <div class="education-block">
             <h3>BEN's SUPERSTAR</h3>
@@ -509,38 +469,6 @@
             </p>
         </div>
         <!-- End .honor-block -->
-    </div>
-
-
-
-
-    <div id="publications" class="background-alt">
-        <h2 class="heading">Publications</h2>
-        <div class="education-block">
-            <h3>Transportation Portal</h3>
-            <span class="education-date">2017</span>
-            <h4></h4>
-            <p>
-                Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
-                Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
-                INTERDISCIPLINARY INNOVATIVE RESEARCH AND DEVELOPMENT Vol. 01, Issue
-                03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
-            </p>
-        </div>
-        <!-- End .publications-block -->
-
-        <div class="education-block">
-            <h3>Survey on Transportation Portal</h3>
-            <span class="education-date">Nov 2016</span>
-            <h4></h4>
-            <p>
-                Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
-                Ingale: A Survey on Transportation portal, in: International Journal of Innovative
-                Research in Computer and Communication Engineering, Balkrishna Londhe , Dr.Arati
-                Dandwate, 2016, ISBN/ISSN: 2320-9801
-            </p>
-        </div>
-        <!-- End .publications-block -->
     </div>
 
 
@@ -705,6 +633,77 @@
         </div>
     </div>
     <!-- End #publications -->
+
+    <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>Bachelor's of Engineering on Computers</h3>
+            <span class="education-date">2013-2017</span>
+            <h4>Savitribai Phule Pune University</h4>
+            <p>
+                Completed BE in Computer Engineering with Distinction.<br>                
+                ACADEMIC PROJECT<br>
+                Project title: Transportation Portal (BE 2016-17)<br>
+                Duration: June 2016 -April 2017<br>
+                Description: The Portal will provide transportation details to user and will keep data
+                stored in Centralized database. We are providing Web portal and Android application where in
+                Android application notification system is provided. Further in portal we are
+                implementing this by using software only so surely it will reduce coast of Project.                
+            </p>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>HSC in Science</h3>
+            <span class="education-date">2012-2013</span>
+            <h4>Maharashtra State Board</h4>
+            <p>
+                Completed Higher Secondary studies with First Class.
+        </p>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>SSC</h3>
+            <span class="education-date">2010-2011</span>
+            <h4>Maharashtra State Board</h4>
+            <p>
+                Completed Secondary studies with Distinction.
+        </p>
+        </div>
+    </div>
+    <!-- End #education -->
+
+
+
+    <div id="publications" class="background-alt">
+        <h2 class="heading">Publications</h2>
+        <div class="education-block">
+            <h3>Transportation Portal</h3>
+            <span class="education-date">2017</span>
+            <h4></h4>
+            <p>
+                Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
+                Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
+                INTERDISCIPLINARY INNOVATIVE RESEARCH AND DEVELOPMENT Vol. 01, Issue
+                03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
+            </p>
+        </div>
+        <!-- End .publications-block -->
+
+        <div class="education-block">
+            <h3>Survey on Transportation Portal</h3>
+            <span class="education-date">Nov 2016</span>
+            <h4></h4>
+            <p>
+                Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
+                Ingale: A Survey on Transportation portal, in: International Journal of Innovative
+                Research in Computer and Communication Engineering, Balkrishna Londhe , Dr.Arati
+                Dandwate, 2016, ISBN/ISSN: 2320-9801
+            </p>
+        </div>
+        <!-- End .publications-block -->
+    </div>
 
     <div id="contact">
         <h2>Get in Touch</h2>
