--- a/index.html
+++ b/index.html
@@ -147,25 +147,16 @@
                     Designing Kubernetes cluster and Docker Environment for deployment
                 </li>
                 <li>
-                    Made Shell scripts to automate the installation of Kubernetes master and node also Docker
-                    setup on Vanilla VM in one script using one command also Automation Scripts for adding
-                    dynamic Prometheus target, dynamic creation of Grafana dashboard, dynamic port allocation,
-                    dynamic virtual server entry
+                    Made Shell scripts to automate the installation of Kubernetes master and node also Docker setup on Vanilla VM in one script using one command also Automation Scripts for adding dynamic Prometheus target, dynamic creation of Grafana dashboard, dynamic port allocation, dynamic virtual server entry
                 </li>
                 <li>
-                    Managing containers using Orchestration tools like Kubernetes. Having a good understanding
-                    of Container Log and Management, Networking. Good Understanding of Docker file and its
-                    components, written some of the Docker files for Developing Images
+                    Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, written some of the Docker files for Developing Images 
                 </li>
                 <li>
-                    Good understanding of Kubernetes manager components like API Server, etc, Scheduler,
-                    Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,
-                    Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like
-                    Ingres and NodePort                    
+                    Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet, Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort                    
                 </li>
                 <li>
-                    Maintain and understand the cluster, to design and deploy the workload in the proper worker
-                    nodes                  
+                    Maintain and understand the cluster, to design and deploy the workload in the proper worker nodes                  
                 </li>
                 <li>
                     Creating Docker deployment environment 
@@ -192,8 +183,7 @@
                     Worked on installation of Istio in Kubernetes cluster and managing cluster                   
                 </li>
                 <li>
-                    Involved in Creating containers and managing them in both production and nonproduction
-                    environments
+                    Involved in Creating containers and managing them in both production and nonproduction environments
                 </li>
                 <li>
                     Responsible for the installation of the master-slave installation of Kubernetes Clusters
@@ -205,8 +195,7 @@
                     Worked on installation and management of Static code analysis tool like SonarQube
                 </li>
                 <li>
-                    Worked on installation and management of logging tools like Elasticsearch, Logstash and
-                    Kibana
+                    Worked on installation and management of logging tools like Elasticsearch, Logstash and Kibana
                 </li>
                 <li>
                     Worked on installation and management of tools like Zipkin
@@ -215,22 +204,19 @@
                     Was responsible for deployment and management of istio on Kubernetes clusters                    
                 </li>
                 <li>
-                    Worked on the deployment of tools like Kafdrop using docker-compose and helm chart for
-                    monitoring of Kafka topics and logs
+                    Worked on the deployment of tools like Kafdrop using docker-compose and helm chart for monitoring of Kafka topics and logs
                 </li>
                 <li>
                     Worked on the deployment of tools like elastalerts, filebeat, Eureka and etc                   
                 </li>
                 <li>
-                    Worked on deployment and management of tools like Configserver, Eureka and
-                    HystrixDashboard
+                    Worked on deployment and management of tools like Configserver, Eureka and HystrixDashboard
                 </li>
                 <li>
                     Also, I deployed node exporter, Cadvisor, MySQL
                 </li>
                 <li>
-                    Created end to end continuous integration and deployment environment using docker and
-                    kubernetes
+                    Created end to end continuous integration and deployment environment using docker and kubernetes
                 </li>
                 <li>
                     Installation of JIRA and management of JIRA 
@@ -242,12 +228,10 @@
                     Istio configuration and routing services using the gateway and VirtualService                 
                 </li>
                 <li>
-                    Using Jfrog as image and artifactory management Create Automation CI/CD pipeline using
-                    Jenkins and Ansible
+                    Using Jfrog as image and artifactory management Create Automation CI/CD pipeline using Jenkins and Ansible
                 </li>
                 <li>
-                    Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server,
-                    and Tomcat                  
+                    Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat                  
                 </li>
             </p>
         </div>
@@ -257,8 +241,7 @@
             <p>
                 <br><br>
                 <li>
-                    Setting Grafana dashboard using InfluxDB and Telegraph which will monitor over 50+ VM’s to
-                    check health status of new & existing infrastructure.
+                    Setting Grafana dashboard using InfluxDB and Telegraph which will monitor over 50+ VM’s to check health status of new & existing infrastructure.
                 </li>
                 <li>
                     Setting up Prometheus for application traces
@@ -320,31 +303,25 @@
                     Deployed Java Spring boot applications on Docker and Kubernetes
                 </li>
                 <li>
-                    Deploy Microservices to different Environment provided by the client using GitLab CI/CD
-                    pipelines
+                    Deploy Microservices to different Environment provided by the client using GitLab CI/CD pipelines
                 </li>
                 <li>
                     Created automation CI/CD pipeline using Jenkins, Ansible and IBM UCD
                 </li>
                 <li>
-                    Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch
-                    Project               
+                    Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch Project               
                 </li>
                 <li>
                     Worked on building IIB images
                 </li>
                 <li>
-                    Created automation CI/CD pipeline using Jenkins, Ansible and IBM UCD also setup of Logging
-                    platform for team using – ELK (elastic search, Logstash, Kibana)
+                    Created automation CI/CD pipeline using Jenkins, Ansible and IBM UCD also setup of Logging platform for team using – ELK (elastic search, Logstash, Kibana)
                 </li>
                 <li>
-                    The Canonical microservices were deployed using GitLab Auto-DevOps pipeline and create
-                    docker images were planned to store in common jFrog artifactory and it will be deployed in the
-                    Kubernetes cluster as a part of deployment via the YAML
+                    The Canonical microservices were deployed using GitLab Auto-DevOps pipeline and create docker images were planned to store in common jFrog artifactory and it will be deployed in the Kubernetes cluster as a part of deployment via the YAML
                 </li>
                 <li>
-                    Worked on migration activity from Github to Gitlab SAAS to move the microservices and then
-                    refactor them to migrate to GitLab SAAS 
+                    Worked on migration activity from Github to Gitlab SAAS to move the microservices and then refactor them to migrate to GitLab SAAS 
                 </li>
                 <li>
                     Used docker containers in Kubernetes cluster for their application workload (Helm) and AWS
@@ -356,8 +333,7 @@
                     Wrote spring boot application to create and run Continuous Integration activities on Jenkins
                 </li>
                 <li>
-                    Wrote spring boot application to create and run Continuous Deployment activities on Urban
-                    Code Development and Ansible
+                    Wrote spring boot application to create and run Continuous Deployment activities on Urban Code Development and Ansible
                 </li>
                 <li>
                     Deployment of application and Management of IBM Kubernetes Service
@@ -370,29 +346,22 @@
             <p>
                 <br><br>
                 <li>
-                    Developed script for cleaning up unused docker images, exited containers in cluster nodes and
-                    older docker images from Artifactory
+                    Developed script for cleaning up unused docker images, exited containers in cluster nodes and older docker images from Artifactory
                 </li>
                 <li>
-                    Developed container and YAML to deploy the monitoring solution in Kubernetes cluster on to
-                    workload of Helm Chart
+                    Developed container and YAML to deploy the monitoring solution in Kubernetes cluster on to workload of Helm Chart
                 </li>
                 <li>
-                    Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues
-                    Integration, Continues Delivery, and Continues Deployment
+                    Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment
                 </li>
                 <li>
-                    Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced
-                    with principles and best practices of Software Configuration Management in Agile, Waterfall
-                    methodologies             
+                    Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies             
                 </li>
                 <li>
-                    Created System metric Dashboard on Grafana for 50+ VMs Working Knowledge on monitoring
-                    tool – Grafana, Prometheus and plays a role in Linux Administration
+                    Created System metric Dashboard on Grafana for 50+ VMs Working Knowledge on monitoring tool – Grafana, Prometheus and plays a role in Linux Administration
                 </li>
                 <li>
-                    Prepare Postman reports comparing between various environments for API testing and
-                    verifications
+                    Prepare Postman reports comparing between various environments for API testing and verifications
                 </li>
                 <li>
                     Worked on Different environments like development, test and System Integration test and etc
