--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
                     Docker Container Registry
                 </li>
                 <li>
+                    Ansible and Automation
+                </li>
+                <li>
                     Setting simple rules to deny sites & downloads                    
                 </li>
                 <li>
@@ -543,6 +546,18 @@
                         </li>
                         <li>
                             Ansible Advanced-HandsOn-DevOps
+                        </li>
+                        <li>
+                            Ansible Essentials Simplicity in Automation
+                        </li>
+                        <li>
+                            Ansible Essentials Simplicity in Automation
+                        </li>
+                        <li>
+                            Devops Series Server Automation Using Ansible
+                        </li>
+                        <li>
+                            Dvops Beginners Guide To Automation With Ansible
                         </li>
                         <li>
                             DevOps learning path for DevOps Essentials badge
