--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Balkrishna Atmaram Londhe</h1>
-            <h2>DevOps Engineer</h2>
+            <h1>Balkrishna Mangal Atmaram Londhe</h1>
+            <h2><b>DevOps Engineer</b></h2>
             <a href="images/Balkrishna Atmaram Londhe.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading"><b>About Me</b></h2>
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -92,7 +92,7 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading"><b>Experience</b></h2>
         <div id="experience-timeline">
             <div data-date="April 2018 – till date">
                 <h3>IBM India Private Limited</h3>
@@ -106,7 +106,7 @@
     <!-- End #experience -->
 
     <div id="responsibilities">
-        <h2 class="heading">Job Responsibilities</h2>
+        <h2 class="heading"><b>Job Responsibilities</b></h2>
         <div class="education-block">
             <h3><b>Hands on expertise</b></h3>
             <p>
@@ -387,7 +387,7 @@
 
 
     <div id="honors" class="background-alt">
-        <h2 class="heading">Honors & Awards</h2>
+        <h2 class="heading"><b>Honors & Awards</b></h2>
         
 
         <div class="education-block">
@@ -460,7 +460,7 @@
 
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading"><b>Skills</b></h2>
         <ul>
             <li>Kubernetes</li>
             <li>Docker</li>
@@ -508,7 +508,7 @@
 
 
     <div id="certificates" class="background-alt">
-        <h2 class="heading">Certifications and Key Courses</h2>
+        <h2 class="heading"><b>Certifications and Key Courses</b></h2>
         <div class="container">
             <div class="row">
                 <div class="education-block">
@@ -632,7 +632,7 @@
     <!-- End #publications -->
 
     <div id="education">
-        <h2 class="heading">Education</h2>
+        <h2 class="heading"><b>Education</b></h2>
         <div class="education-block">
             <h3>Bachelor's of Engineering on Computers</h3>
             <span class="education-date">2013-2017</span>
@@ -674,7 +674,7 @@
 
 
     <div id="publications" class="background-alt">
-        <h2 class="heading">Publications</h2>
+        <h2 class="heading"><b>Publications</b></h2>
         <div class="education-block">
             <h3>Transportation Portal</h3>
             <span class="education-date">2017</span>
@@ -703,7 +703,7 @@
     </div>
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2><b>Get in Touch</b></h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/londhebalkrishna@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
